# jag-board

./: README.md  links.md  parts-list.md  requirements.md
os/: Cargo.toml  riji.rhai
os/src/: main.rs
pcb-generator/: Cargo.toml  README.md
pcb-generator/samples/: sample_bom.csv  sample_cpl.csv
pcb-generator/src/: bom.rs  cpl.rs  gerber.rs  main.rs  partslist.rs  util.rs
pcb-v1/: .gitignore  bom.csv  fp-info-cache  fp-lib-table  jag-board-lib.bak  jag-board-lib.kicad_sym  jag-v1-job.gbrjob  jag-v1.kicad_pcb  jag-v1.kicad_prl  jag-v1.kicad_pro  jag-v1.kicad_sch  rotation-table.csv  sym-lib-table
pcb-v1/jag_board/: ATGM336H-5N.kicad_mod  Batt Connector.kicad_mod  C434807.kicad_mod  LSM6DSR.kicad_mod  Motor Conn.kicad_mod  USB_C_MOLEX.kicad_mod  YSPI1050.kicad_mod  jaguar.kicad_mod  jaguar_43mm.kicad_mod
pi-os/: .gitignore  Cargo.toml
pi-os/src/: main.rs  old.rs  webrtc.rs
pi-os/src/camera/: file.rs  mod.rs  pi.rs  v4l2.rs
pi-os/src/webrtc/: twcc_interceptor.rs
